cfn-templates/aip-bi/--aip-resources.cfn.json

{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Provision resource dependencies for the aMediaManager app (e.g., RDS, S3, DynamoDB, etc..), then app on AWS Elastic Beanstalk via the amm-eb-app substack.",

  "Parameters": {

    "DatabaseUser": {
      "Default": "admin",
      "NoEcho": "true",
      "Type": "String",
      "Description": "Database admin account name",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription": "must begin with a letter and contain only alphanumeric characters."
    },
    "DatabasePassword": {
      "Default": "0bee082a464",
      "NoEcho": "true",
      "Type": "String",
      "Description": "Database admin account password",
      "MinLength": "1",
      "MaxLength": "41",
      "AllowedPattern": "[a-zA-Z0-9]*",
      "ConstraintDescription": "must contain only alphanumeric characters."
    },
    "DatabaseName": {
      "Description": "The name of the database",
      "Type": "String",
      "Default": " amediamanager"
    },
    "InstanceSecurityGroup" : {
      "Description" : "A VPC Security Group ID that has ingress access to a NAT instance in the VPC. EB instances will be launched into this group.",
      "Type": "String"
    },
    "VPCId" : {
      "Description" : "A VPC ID.",
      "Type": "String"
    },
    "PrivateSubnet1" : {
      "Description" : "A private VPC subnet ID.",
      "Type": "String"
    },
    "PrivateSubnet2" : {
      "Description" : "A private VPC subnet ID. Must be in a different AZ than PrivateSubnet1",
      "Type": "String"
    }
  },

  "Resources": {
    "AppBucket": {
      "Type": "AWS::S3::Bucket"
    },
    "UsersTable": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "KeySchema": {
          "HashKeyElement": {
            "AttributeName": "EMail",
            "AttributeType": "S"
          }
        },
        "ProvisionedThroughput": {
          "WriteCapacityUnits": 10,
          "ReadCapacityUnits": 10
        }
      }
    },

    "CacheSubnetGroup" : {
        "Type" : "AWS::ElastiCache::SubnetGroup",
        "Properties" : {
            "Description" : "Cache Subnet Group",
            "SubnetIds": [{
              "Ref": "PrivateSubnet1"
            }, {
              "Ref": "PrivateSubnet2"
            }]
        }
    },

    "CacheParameters" : {
          "Type" : "AWS::ElastiCache::ParameterGroup",
          "Properties" : {
            "CacheParameterGroupFamily" : "memcached1.4",
            "Description" : "Parameter group",
            "Properties" : {
              "cas_disabled" : "1"
            }
          }
        },

        "CacheSecurityGroup" : {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties" : {
            "GroupDescription" : "Allow access to the cache from the Web Server",
            "VpcId" : { "Ref" : "VPCId" },
            "SecurityGroupIngress": [{
              "IpProtocol": "tcp",
              "FromPort": "0",
              "ToPort": "65535",
              "SourceSecurityGroupId": {
                "Ref": "InstanceSecurityGroup"
              }
            }],
            "SecurityGroupEgress": [{
              "IpProtocol": "tcp",
              "FromPort": "0",
              "ToPort": "65535",
              "SourceSecurityGroupId": {
                "Ref": "InstanceSecurityGroup"
              }
            }]
          }      
        },  

        "CacheCluster" : {
          "Type": "AWS::ElastiCache::CacheCluster",
          "Properties": {
            "CacheSubnetGroupName" : { "Ref" : "CacheSubnetGroup" },
            "CacheNodeType"        : "cache.t1.micro",
            "VpcSecurityGroupIds"  : [ { "Ref" : "CacheSecurityGroup" } ],
            "Engine"               : "memcached",
            "NumCacheNodes"        : "2"
          }
        },

    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow the Elastic Beanstalk instances to access the RDS database",
        "VpcId": {
          "Ref": "VPCId"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "SourceSecurityGroupId": {
            "Ref": "InstanceSecurityGroup"
          }
        }],
        "SecurityGroupEgress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    },

    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "RDS DB Subnet group",
        "SubnetIds": [{
          "Ref": "PrivateSubnet1"
        }, {
          "Ref": "PrivateSubnet2"
        }]
      }
    },

    "Database": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "Engine": "MySQL",
        "DBName": {
          "Ref": "DatabaseName"
        },
        "MasterUsername": {
          "Ref": "DatabaseUser"
        },
        "DBInstanceClass": "db.m1.small",
        "AllocatedStorage": "5",
        "MasterUserPassword": {
          "Ref": "DatabasePassword"
        },
        "VPCSecurityGroups": [{
          "Ref": "DBSecurityGroup"
        }],
        "DBSubnetGroupName": {
          "Ref": "DBSubnetGroup"
        }
      }
    },

    "AlarmTopic": {
      "Type": "AWS::SNS::Topic"
    },

    "TranscodeQueue": {
      "Type": "AWS::SQS::Queue"
    },

    "TranscodeTopic": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "Subscription": [{
          "Endpoint": {
            "Fn::GetAtt": ["TranscodeQueue", "Arn"]
          },
          "Protocol": "sqs"
        }]
      }
    },

    "TranscodeTopic2QueuePolicy": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "Queues": [{
          "Ref": "TranscodeQueue"
        }],
        "PolicyDocument": {
          "Version": "2008-10-17",
          "Id": "PublicationPolicy",
          "Statement": [{
            "Sid": "Allow-SNS-SendMessage",
            "Effect": "Allow",
            "Principal": {
              "AWS": "*"
            },
            "Action": ["sqs:SendMessage"],
            "Resource": {
              "Fn::GetAtt": ["TranscodeQueue", "Arn"]
            },
            "Condition": {
              "ArnEquals": {
                "aws:SourceArn": {
                  "Ref": "TranscodeTopic"
                }
              }
            }
          }]
        }
      }
    },

    "TranscodeRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2008-10-17",
          "Statement": [{
            "Sid": "1",
            "Effect": "Allow",
            "Principal": {
              "Service": "elastictranscoder.amazonaws.com"
            },
            "Action": "sts:AssumeRole"
          }]
        },
        "Path": "/",
        "Policies": [{
          "PolicyName": "TranscodePolicy",
          "PolicyDocument": {
            "Version": "2012-10-17",
            "Statement": [{
              "Sid": "1",
              "Effect": "Allow",
              "Action": [
                "s3:Get*",
                "s3:ListBucket",
                "s3:Put*",
                "s3:*MultipartUpload*"
              ],
              "Resource": [{
                "Fn::Join": ["", ["arn:aws:s3:::", {
                  "Ref": "AppBucket"
                }, "/*"]]
              }, {
                "Fn::Join": ["", ["arn:aws:s3:::", {
                  "Ref": "AppBucket"
                }]]
              }]
            }, {
              "Sid": "2",
              "Effect": "Allow",
              "Action": "sns:Publish",
              "Resource": {
                "Ref": "TranscodeTopic"
              }
            }, {
              "Sid": "3",
              "Effect": "Deny",
              "Action": [
                "sns:*Permission*",
                "sns:*Delete*",
                "sns:*Remove*",
                "s3:*Policy*",
                "s3:*Delete*"
              ],
              "Resource": "*"
            }]
          }
        }]
      }
    }
  },
  "Outputs": {
    "InstanceSecurityGroup": {
      "Value": {"Ref": "InstanceSecurityGroup"}
    },
    "RdsDbId": {
       "Value" : { "Ref" : "Database" }
    },
    "CacheEndpoint": { 
      "Value": { "Fn::GetAtt" : [ "CacheCluster", "ConfigurationEndpoint.Address" ]}
    },
    "CachePort": { 
      "Value" : {"Fn::GetAtt" : [ "CacheCluster", "ConfigurationEndpoint.Port" ]}
    },
    "AppBucket": {
      "Value": { "Ref" : "AppBucket"}
    },
    "TranscodeTopic": {
      "Value": { "Ref" : "TranscodeTopic" }
    },
    "TranscodeQueue": {
      "Value": { "Ref" : "TranscodeQueue" }
    },
    "TranscodeRoleArn": {
      "Value": { "Fn::GetAtt": ["TranscodeRole", "Arn"]}
    },
    "UsersTable": {
      "Value": { "Ref" : "UsersTable" }
    },
    "DatabaseUser":{
      "Value": { "Ref" : "DatabaseUser"}
    },
    "DatabasePassword": {
      "Value": { "Ref" : "DatabasePassword" }
    },
    "InstanceSecurityGroup": {
      "Value": { "Ref" : "InstanceSecurityGroup" }
    }
  }
}
